# python-fastapi-mongo-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
scripts/: compile-reqs  docker-up  git-commit-push  lint  run  start
src/python_fastapi_mongo_template/: __init__.py  asgi.py  database.py  router.py  settings.py
