[project]
name = "python-fastapi-mongo-template"
version = "0.1.0"
description = "python-fastapi-mongo-template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "motor>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pyright>=1.1.391",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.0",
    "uvicorn>=0.34.0",
]
